--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@types/express": "^4.17.21",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "nodemailer": "^6.9.11"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/nodemailer": "^6.4.14",
     "prisma": "^5.10.2",
     "typescript": "^5.3.3"
   }
